Fix html spacing

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,6 @@ h1 {
   max-width: 100%;
 }
 
-
 nav ul {
   text-align: center;
   padding: 0;
@@ -86,9 +85,7 @@ li h3 {
 }
 
 section ul {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
+  display: inline-block;
   padding-right: 3em;
 }
 
@@ -220,10 +217,6 @@ section p {
   position: relative;
 }
 
-.nutfree .img-flex {
-  width: 100%;
-}
-
 .nutfree figcaption {
   font-family: "Sulphur Point", sans-serif;
   font-size: 1.5em;
@@ -242,7 +235,7 @@ section p {
   position: relative;
 }
 
-.glutenfree .img-flex {
+.img-flex {
   width: 100%;
 }
 
